<resources>
    <string name="app_name">Coffee Shop</string>
    <string name="get_started">Get Started</string>
    <string name="location">Location</string>
    <string name="place">RigbetelLabs, Pune</string>
    <string name="search_coffee">Search coffee</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="machiato">Machiato</string>
    <string name="latte">Latte</string>
    <string name="americano">Americano</string>
    <string name="with_chocolate">with Chocolate</string>
    <string name="with">With\u0020</string>
    <string name="free">Free</string>
    <string name="_4_5">4.5</string>
    <string name="_1">1</string>
    <string name="count">(230)</string>
    <string name="description">Description</string>
    <string name="longDesc">A cappuccino is an approximately 150 ml (5 oz) beverage, with 25 ml of espresso coffee and 85ml of fresh milk the fo.. Read More</string>
    <string name="size">Size</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="buy_now">Buy Now</string>
    <string name="price">Price</string>
    <string name="name">Mr. Yatish</string>
    <string name="edit_address">Edit Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add_note">Add Note</string>
    <string name="coupon_count">1 Discount is applied</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="fee">₹ -04</string>
    <string name="total_payment">Total Payment</string>
    <string name="order">Order</string>
    <string name="time_left">10 minutes left</string>
    <string name="delivery_to_name">Delivery to Mr. Yatish</string>
    <string name="your_order">Delivered your order</string>
    <string name="delivery_desc">We deliver your goods to you in the shortes possible time.</string>
    <string name="johan_hawn">Johan Hawn</string>
    <string name="personal_courier">Personal Courier</string>
    <string name="sub_title">The best grain, the finest roast, the powerful flavor.</string>
    <string name="title">Coffee so good, your taste buds will love it.</string>
    <string name="deliver">Deliver</string>
    <string name="pick_up">Pick Up</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="read_more">\u0020Read More</string>
    <string name="detail">Detail</string>
    <string name="all">All</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="coffee_not_available">Coffee not available</string>
    <string name="item_not_found">Item not found</string>
    <string name="already_sign_up_login">Already Sign Up? Login</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have account? Sign Up</string>
</resources>