<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_black"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/coffeemain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:fontFamily="@font/sora_bold"
        android:gravity="center"
        android:padding="@dimen/_20dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/_34sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSubTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvSubTitle"
        app:layout_constraintStart_toStartOf="@+id/tvSubTitle" />

    <TextView
        android:id="@+id/tvSubTitle"
        style="@style/Text14Grey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24dp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_16dp"
        android:text="@string/sub_title"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintStart_toStartOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnStart"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_marginVertical="@dimen/_24dp"
        android:padding="@dimen/_20dp"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>