<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.itemdetail.view.ItemDetailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_30dp" />

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/cvBuy"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgCoffee"
                android:layout_width="0dp"
                android:layout_height="225dp"
                android:layout_marginTop="@dimen/_24dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/coffee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageView16" />

            <TextView
                android:id="@+id/tvCoffeeName"
                style="@style/Text20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/cappuccino"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCoffee" />

            <TextView
                android:id="@+id/tvWith"
                style="@style/Text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/with_chocolate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCoffeeName" />

            <TextView
                android:id="@+id/tvRating"
                style="@style/Text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:drawablePadding="@dimen/_4dp"
                android:text="@string/_4_5"
                app:drawableStartCompat="@drawable/star20"
                app:layout_constraintStart_toStartOf="@+id/tvWith"
                app:layout_constraintTop_toBottomOf="@id/tvWith"
                tools:text="@string/_4_5" />

            <TextView
                android:id="@+id/tvRatingCount"
                style="@style/Text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4dp"
                android:text="@string/count"
                app:layout_constraintBottom_toBottomOf="@+id/tvRating"
                app:layout_constraintStart_toEndOf="@+id/tvRating" />

            <ImageButton
                android:layout_width="@dimen/_44dp"
                android:layout_height="@dimen/_44dp"
                android:layout_marginHorizontal="@dimen/_12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/bean"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="@+id/imageButton" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="@dimen/_44dp"
                android:layout_height="@dimen/_44dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/milk"
                app:layout_constraintBottom_toBottomOf="@+id/line"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/lineGrey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRating" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/Text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tvDesc"
                style="@style/Text14Grey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                tools:text="@string/longDesc" />

            <TextView
                android:id="@+id/tvSize"
                style="@style/Text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginBottom="@dimen/_12dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSize">

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12dp"
                    android:layout_weight="1"
                    android:text="@string/s" />

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m" />

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12dp"
                    android:layout_weight="1"
                    android:text="@string/l" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPrice"
                style="@style/Text14Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnBuyNow" />

            <TextView
                android:id="@+id/tvPriceCount"
                style="@style/Text18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:textColor="@color/orange"
                app:layout_constraintBottom_toBottomOf="@+id/btnBuyNow"
                app:layout_constraintStart_toStartOf="@+id/tvPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

            <Button
                android:id="@+id/btnBuyNow"
                style="@style/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_36dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:paddingVertical="@dimen/_20dp"
                android:text="@string/buy_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tvPrice"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>