<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.DeliverFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_30dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/cvOrder"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDeliveryAddress"
                style="@style/Text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:text="@string/delivery_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                style="@style/Text14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/name"
                android:textColor="@color/textBlack"
                app:layout_constraintStart_toStartOf="@+id/tvDeliveryAddress"
                app:layout_constraintTop_toBottomOf="@+id/tvDeliveryAddress" />

            <TextView
                android:id="@+id/tvPlace"
                style="@style/Text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:text="@string/place"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <Button
                android:id="@+id/button"
                style="@style/Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22dp"
                android:drawableLeft="@drawable/edit"
                android:text="@string/edit_address"
                app:layout_constraintStart_toStartOf="@+id/tvPlace"
                app:layout_constraintTop_toBottomOf="@+id/tvPlace" />

            <Button
                style="@style/Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:drawableLeft="@drawable/note"
                android:text="@string/add_note"
                app:layout_constraintBottom_toBottomOf="@+id/button"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="@+id/button"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/lineGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgCoffee"
                android:layout_width="@dimen/_54dp"
                android:layout_height="@dimen/_54dp"
                android:layout_marginTop="@dimen/_20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/coffee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:shapeAppearanceOverlay="@style/roundedImageView12" />

            <TextView
                android:id="@+id/tvCoffeeName"
                style="@style/Text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12dp"
                android:text="@string/cappuccino"
                app:layout_constraintBottom_toTopOf="@+id/tvWith"
                app:layout_constraintStart_toEndOf="@+id/imgCoffee"
                app:layout_constraintTop_toTopOf="@+id/imgCoffee" />

            <TextView
                android:id="@+id/tvWith"
                style="@style/Text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_chocolate"
                app:layout_constraintBottom_toBottomOf="@+id/imgCoffee"
                app:layout_constraintStart_toStartOf="@+id/tvCoffeeName"
                app:layout_constraintTop_toBottomOf="@+id/tvCoffeeName" />

            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toBottomOf="@+id/tvWith"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCoffeeName" />

            <TextView
                android:id="@+id/tvCount"
                style="@style/Text14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14dp"
                android:text="@string/_1"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/btnPlus"
                app:layout_constraintEnd_toStartOf="@+id/btnPlus"
                app:layout_constraintTop_toTopOf="@+id/btnPlus" />

            <ImageButton
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/minus"
                app:layout_constraintBottom_toBottomOf="@+id/tvCount"
                app:layout_constraintEnd_toStartOf="@+id/tvCount"
                app:layout_constraintTop_toTopOf="@+id/tvCount" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_4dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/lineGrey"
                app:layout_constraintTop_toBottomOf="@+id/imgCoffee" />

            <TextView
                android:id="@+id/tvCoupon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/border_field"
                android:drawablePadding="@dimen/_12dp"
                android:padding="@dimen/_16dp"
                android:text="@string/coupon_count"
                app:drawableLeftCompat="@drawable/discount"
                app:drawableRightCompat="@drawable/arrow_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/tvPaymentSummary"
                style="@style/Text16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/payment_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCoupon" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/Text14BlackRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/price"
                android:textColor="@color/textBlack"
                app:layout_constraintEnd_toStartOf="@+id/tvPriceCount"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPaymentSummary" />

            <TextView
                android:id="@+id/tvPriceCount"
                style="@style/Text14BlackMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvPrice"
                app:layout_constraintTop_toTopOf="@+id/tvPrice" />

            <TextView
                android:id="@+id/tvDeliveryFee"
                style="@style/Text14BlackRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/delivery_fee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPrice" />

            <TextView
                android:id="@+id/tvFreeCancel"
                style="@style/Text14BlackRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:text="@string/free"
                app:layout_constraintEnd_toStartOf="@+id/tvDeliveryPrice"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/tvDeliveryFee"
                app:layout_constraintTop_toTopOf="@+id/tvDeliveryFee" />

            <TextView
                android:id="@+id/tvDeliveryPrice"
                style="@style/Text14BlackMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvFreeCancel"
                app:layout_constraintTop_toTopOf="@+id/tvFreeCancel" />

            <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_2dp"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@color/lineGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDeliveryFee" />


            <TextView
                android:id="@+id/tvTotalPayment"
                style="@style/Text14BlackRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/total_payment"
                app:layout_constraintEnd_toStartOf="@+id/tvPayment"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line2" />

            <TextView
                android:id="@+id/tvPayment"
                style="@style/Text14BlackMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvTotalPayment"
                app:layout_constraintTop_toTopOf="@+id/tvTotalPayment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16dp"
                android:layout_marginStart="@dimen/_30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/moneys"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cash"
                app:layout_constraintStart_toEndOf="@+id/btnMoney"
                app:layout_constraintTop_toTopOf="@+id/btnMoney" />

            <ImageButton
                android:id="@+id/btnDots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dots"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnOrder"
                style="@style/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16dp"
                android:paddingVertical="@dimen/_20dp"
                android:text="@string/order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnDots"
                app:layout_constraintStart_toStartOf="@+id/btnMoney"
                app:layout_constraintTop_toBottomOf="@+id/btnMoney" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>